- fixed reset LCD after disabling forced blank
- speed up now uses frameskip 9 (6 FPS)
- improved message when BIOS function cannot be emulated
Windows changes:
- added freeze recent list option
- added 800x600 support
- support to export GamesharkAdvance save games
- fixed bug when changing directories in the Directories... dialog
SDL version:
- fixed crash when printing void * variables
- fixed crash when -b specified incorrectly
- fixed warning when reading configuration file about disableMMX if compiled
  without MMX support

Version 1.1:

Core changes:
- added DMA logging
- added GBA intro remover
- fixed an ARM bug for opcodes like OP Rd,Rb,Rm ROR Rs where Rs > 0
  and Rs % 32 == 0
- fixed some minor inconsistencies on the THUMB core (no actual bug reported)
- fixed bug with windows and alpha-bleding the wrong layer
- fixed sound channel 3 volume
- fixed the EEPROM battery save bug
Windows changes:
- added reset buttons to the directories dialog
- added Logging console (for internal GBA logging and console output)
- enhanced Map Viewer with more information about map and clicked spot
- enhanced Tile Viewer with more information about tiles and clicked spot
- added speed up toggle
- fixed a bug configuring hotkeys for some menu options
- fixed a bug where the joypad configuration dialog had strange colors
- fixed a crash when opening the Disassemble window when emulating a GB program

Version 1.0a:

Core changes:
- corrected sound mixing to be more like in version 0.9.1
Windows changes:
- fixed battery file load/save when directory not set
- fixed crashes when directories not set
- fixed crash when passing image from command line in same directory
- updated company list for rom information dialogs

Version 1.0:

Core changes:
- semi-transparent objects are now processed correctly when windows enabled
- battery files now written even after resetting
- 16-bit sound rendering
- fixed some LDM/STM instructions when running in user/system mode